@@ -3,6 +3,7 @@ Revision history for Perl module JSON::Tiny
 0.51 2015-01-24
   - Generate smaller JSON by not escaping '/' character.
   - Add from_json and to_json functions.
+  - Deprecate Object-Oriented API.
 
 0.50 2014-08-05
   - Whitespace parsing simplification/optimization.
